# HDiffPatch

./: .gitignore  CMakeLists.txt  README.md
libHDiffPatch/HDiff/: diff.cpp
libHDiffPatch/HPatch/: patch.c
